--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.9.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
